--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>NBA MVP's</title>
 </head>
 <body>
-	
+	<div> <!-- main container -->
+		<div> <!--header bar (on all pages)-->
+			<div> <!-- header title -->
+				<h1>
+					NBA MVP's
+				</h1>
+			</div>
+			<div>
+				<!--image of naismith mvp trophy -->
+			</div>
+			
+			<div>
+				<select>
+					<option>Select a Year</option>
+					<option>2020</option>
+					<option>2018</option>
+				</select>
+			</div>
+		</div>
 
+		<div>	<!--body container (on all pages)-->
+			<div> <!-- body heading-->
+				<h3>
+					What Does It Take To Be The Greatest?
+				</h3>
+			</div>
+			<div>	<!-- body text container -->
+				<p>Body Text Here</p>
+			</div>
+			<div>	<!-- img container -->
+				<img src="#">
+			</div>
+		</div>
+
+	</section>
 </body>
 </html>
