--- a/2019.html
+++ b/2019.html
@@ -57,48 +57,48 @@
 					<img src="#">
 					<p>Caption</p>
 				</div>
-				<div
-					>Some text blurb Giannis dunk etc
+				<div>
+					<p>Some text blurb Giannis dunk etc</p>
 				</div>
 			</div>
 			
 			<div id='container_stats'>	<!-- body stats container -->
-				<div> <!--'boxes' for counting stats 1-->
+				<div class="stat_box"> <!--'boxes' for counting stats 1-->
 					<h4>Points</h4>
 					<h3>1857</h3>
 					<h5>29.5 PPG</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 2-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 2-->
 					<h4>Rebounds</h4>
 					<h3>856</h3>
 					<h5>13.6 RPG</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 3-->
+				<div class='stat_box'> <!--'boxes' for counting stats 3-->
 					<h4>Assists</h4>
 					<h3>354</h3>
 					<h5>5.6 APG</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 4-->
+				<div class='stat_box'> <!--'boxes' for counting stats 4-->
 					<h4>FG%</h4>
 					<h3>55.3%</h3>
 					<h5>1238 FGA</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 5-->
+				<div class='stat_box'> <!--'boxes' for counting stats 5-->
 					<h4>3 Pointers</h4>
 					<h3>30.4%</h3>
 					<h5>4.7 3PA/G</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 6-->
+				<div class='stat_box'> <!--'boxes' for counting stats 6-->
 					<h4>Steals</h4>
 					<h3>61</h3>
 					<h5>1.0</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 7-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 7-->
 					<h4>Blocks</h4>
 					<h3>66</h3>
 					<h5>1.0</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 8-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 8-->
 					<h4>Plus / Minus</h4>
 					<h3>Number</h3>
 					<h5>League Rank?</h5>
