--- a/2019.html
+++ b/2019.html
@@ -34,10 +34,10 @@
 			</div>
 			
 			<div id = 'menu'>
-				<button id = 'menu_button'>Year:</button> <!--dropdown link list in CSS -->
+				<button id = 'menu_button'>Go to:</button> <!--dropdown link list in CSS -->
 				<div id='menu_options'>
-					<a class='menu_item' href="./2019.html">2020</a>
-					<a class='menu_item' href="./2017.html">2018</a>
+					<a class='menu_item' href="./index.html">Home</a>
+					<a class='menu_item' href="./2017.html">2017</a>
 				</div>
 			</div>
 		</div>
@@ -47,7 +47,7 @@
 			<div> <!-- body heading-->
 				<div>
 					<h3 style="font-family: 'Secular One'">
-						2020: Giannis Antetokounmpo
+						2019: Giannis Antetokounmpo
 					</h3>
 					<h5>
 						Forward, Milwaukee Bucks
@@ -88,17 +88,22 @@
 					<h3>30.4%</h3>
 					<h5>4.7 3PA/G</h5>
 				</div>
-				<div class='stat_box'> <!--'boxes' for counting stats 6-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 6-->
+					<h4>FT%</h4>
+					<h3>63.3%</h3>
+					<h5>10.0 FTA/G</h5>
+				</div>
+				<div class='stat_box'> <!--'boxes' for counting stats 7-->
 					<h4>Steals</h4>
 					<h3>61</h3>
 					<h5>1.0</h5>
 				</div>
-				<div  class='stat_box'> <!--'boxes' for counting stats 7-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 8-->
 					<h4>Blocks</h4>
 					<h3>66</h3>
 					<h5>1.0</h5>
 				</div>
-				<div  class='stat_box'> <!--'boxes' for counting stats 8-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 9-->
 					<h4>Plus / Minus</h4>
 					<h3>Number</h3>
 					<h5>League Rank?</h5>
