--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</div>
 			
 			<div id = 'menu'>
-				<button id = 'menu_button'>Year:</button> <!--dropdown link list in CSS -->
+				<button id = 'menu_button'>Go to:</button> <!--dropdown link list in CSS -->
 				<div id='menu_options'>
 					<a class='menu_item' href="./2019.html">2020</a>
 					<a class='menu_item' href="./2017.html">2018</a>
