--- a/2019.html
+++ b/2019.html
@@ -44,7 +44,7 @@
 
 
 		<div id='container_body'>	<!--body container (on all pages)-->
-			<div> <!-- body heading-->
+			<div id='container_intro'> <!-- body heading-->
 				<div>
 					<h3 style="font-family: 'Secular One'">
 						2019: Giannis Antetokounmpo
@@ -96,12 +96,12 @@
 				<div class='stat_box'> <!--'boxes' for counting stats 7-->
 					<h4>Steals</h4>
 					<h3>61</h3>
-					<h5>1.0</h5>
+					<h5>1.0 SPG</h5>
 				</div>
 				<div  class='stat_box'> <!--'boxes' for counting stats 8-->
 					<h4>Blocks</h4>
 					<h3>66</h3>
-					<h5>1.0</h5>
+					<h5>1.0 BPG</h5>
 				</div>
 				<div  class='stat_box'> <!--'boxes' for counting stats 9-->
 					<h4>Plus / Minus</h4>
