--- a/index.html
+++ b/index.html
@@ -37,23 +37,90 @@
 			<div id = 'menu'>
 				<button id = 'menu_button'>Go to:</button> <!--dropdown link list in CSS -->
 				<div id='menu_options'>
-					<a class='menu_item' href="./2019.html">2020</a>
-					<a class='menu_item' href="./2017.html">2018</a>
+					<a class='menu_item' href="./2019.html">2019</a>
+					<a class='menu_item' href="./2017.html">2017</a>
 				</div>
 			</div>
 		</div>
 
 		<div id='container_body'>	<!--body container (on all pages)-->
-			<div> <!-- body heading-->
-				<h3 style="font-family: 'Secular One'">
-					What does it take to be the greatest?
-				</h3>
-			</div>
-			<div>	<!-- body text container -->
-				<p>Body Text Here</p>
-			</div>
-			<div>	<!-- img container -->
-				<img src="#">
+			<div id="container_intro"> <!--body text container (for consistency)-->
+				<div> <!-- body heading-->
+					<h3 style="font-family: 'Secular One'">
+						What does it take to be the greatest?
+					</h3>
+				</div>
+				<div id='container_table'>	<!--body left element-->
+					<table id='table'>
+						<thead>
+							<tr>
+								<th>Player Name</th>
+								<th>Team</th>
+								<th>Season</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Giannis Antetokounmpo</td>
+								<td>Bucks</td>
+								<td>2019-20</td>
+							</tr>
+							<tr>
+								<td>Giannis Antetokounmpo</td>
+								<td>Bucks</td>
+								<td>2018-19</td>
+							</tr>
+							<tr>
+								<td>James Harden</td>
+								<td>Rockets</td>
+								<td>2017-18</td>
+							</tr>
+							<tr>
+								<td>Russell Westbrook</td>
+								<td>Thunder</td>
+								<td>2016-17</td>
+							</tr>
+							<tr>
+								<td>Stephen Curry</td>
+								<td>Warriors</td>
+								<td>2015-16</td>
+							</tr>
+							<tr>
+								<td>Stephen Curry</td>
+								<td>Warriors</td>
+								<td>2014-15</td>
+							</tr>
+							<tr>
+								<td>Kevin Durant</td>
+								<td>Thunder</td>
+								<td>2013-14</td>
+							</tr>
+							<tr>
+								<td>Lebron James</td>
+								<td>Heat</td>
+								<td>2012-13</td>
+							</tr>
+							<tr>
+								<td>Lebron James</td>
+								<td>Heat</td>
+								<td>2011-12</td>
+							</tr>
+							<tr>
+								<td>Derrick Rose</td>
+								<td>Heat</td>
+								<td>2010-11</td>
+							</tr>
+							<tr>
+								<td>Lebron James</td>
+								<td>Cavaliers</td>
+								<td>2009-10</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<div id='container_search'>	<!--body right container-->
+					<p>Search Func. Placeholder Text</p>
+				</div>
 			</div>
 		</div>
 
