--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 					NBA MVPs
 				</h1>
 			</div>
-			<div>
-				<!--image of naismith mvp trophy -->
+			<div id='header_img'>
 			</div>
 			
 			<div id = 'menu'>
@@ -51,6 +50,7 @@
 					</h3>
 				</div>
 				<div id='container_table'>	<!--body left element-->
+					<h4>NBA Most Valuable Players</h4>
 					<table id='table'>
 						<thead>
 							<tr>
@@ -63,61 +63,112 @@
 							<tr>
 								<td>Giannis Antetokounmpo</td>
 								<td>Bucks</td>
-								<td>2019-20</td>
+								<td>19-20</td>
 							</tr>
 							<tr>
 								<td>Giannis Antetokounmpo</td>
 								<td>Bucks</td>
-								<td>2018-19</td>
+								<td>18-19</td>
 							</tr>
 							<tr>
 								<td>James Harden</td>
 								<td>Rockets</td>
-								<td>2017-18</td>
+								<td>17-18</td>
 							</tr>
 							<tr>
 								<td>Russell Westbrook</td>
 								<td>Thunder</td>
-								<td>2016-17</td>
+								<td>16-17</td>
 							</tr>
 							<tr>
 								<td>Stephen Curry</td>
 								<td>Warriors</td>
-								<td>2015-16</td>
+								<td>15-16</td>
 							</tr>
 							<tr>
 								<td>Stephen Curry</td>
 								<td>Warriors</td>
-								<td>2014-15</td>
+								<td>14-15</td>
 							</tr>
 							<tr>
 								<td>Kevin Durant</td>
 								<td>Thunder</td>
-								<td>2013-14</td>
+								<td>13-14</td>
 							</tr>
 							<tr>
 								<td>Lebron James</td>
 								<td>Heat</td>
-								<td>2012-13</td>
+								<td>12-13</td>
 							</tr>
 							<tr>
 								<td>Lebron James</td>
 								<td>Heat</td>
-								<td>2011-12</td>
+								<td>11-12</td>
 							</tr>
 							<tr>
 								<td>Derrick Rose</td>
 								<td>Heat</td>
-								<td>2010-11</td>
+								<td>10-11</td>
 							</tr>
 							<tr>
 								<td>Lebron James</td>
 								<td>Cavaliers</td>
-								<td>2009-10</td>
+								<td>09-10</td>
+							</tr>
+							<tr>
+								<td>Lebron James</td>
+								<td>Cavaliers</td>
+								<td>08-09</td>
+							</tr>
+							<tr>
+								<td>Kobe Bryant</td>
+								<td>Lakers</td>
+								<td>07-08</td>
+							</tr>
+							<tr>
+								<td>Dirk Nowitzki</td>
+								<td>Mavericks</td>
+								<td>06-07</td>
+							</tr>
+							<tr>
+								<td>Steve Nash</td>
+								<td>Suns</td>
+								<td>05-06</td>
+							</tr>
+							<tr>
+								<td>Steve Nash</td>
+								<td>Suns</td>
+								<td>04-05</td>
+							</tr>
+							<tr>
+								<td>Kevin Garnett</td>
+								<td>Timberwolves</td>
+								<td>03-04</td>
+							</tr>
+							<tr>
+								<td>Tim Duncan</td>
+								<td>Spurs</td>
+								<td>02-03</td>
+							</tr>
+							<tr>
+								<td>Tim Duncan</td>
+								<td>Spurs</td>
+								<td>01-02</td>
+							</tr>
+							<tr>
+								<td>Allen Iverson</td>
+								<td>Spurs</td>
+								<td>00-01</td>
+							</tr>
+							<tr>
+								<td>Shaquille O'Neal</td>
+								<td>Lakers</td>
+								<td>99-00</td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
+
 				<div id='container_search'>	<!--body right container-->
 					<p>Search Func. Placeholder Text</p>
 				</div>
