--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
 				</div>
 
 				<div id='container_search'>	<!--body right container-->
-					<p>Search Func. Placeholder Text</p>
+					<input type="text" name="search" placeholder="Search for a player or season">
+					<script type="text/javascript" href='./scripts/scripts.js'>
+						
+					</script>
 				</div>
 			</div>
 		</div>
