--- a/2017.html
+++ b/2017.html
@@ -2,13 +2,30 @@
 <html>
 <head>
 	<title>NBA MVP's-- 2020</title>
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<style type="text/css">
+		.menu_item {
+			color: white;
+			padding: 12px 16px;
+			text-decoration: none;
+			display: block;
+		}
+		#menu:hover #menu_options {
+			display: block;
+		}
+		#menu:hover .menu_item {
+			background-color: #c24a00;
+		}
+		.menu_options a:hover {
+			background-color: #db6a00;
+		}
+	</style>
 </head>
 <body>
-	<div> <!-- main container -->
-
-		<div> <!--header bar (on all pages)-->
+	<div id='container_main'> <!-- main container -->
+		<div id='container_header'> <!--header bar (on all pages)-->
 			<div> <!-- header title -->
-				<h1>
+				<h1 style='font-family: "Secular One"' id='title'>
 					NBA MVP's
 				</h1>
 			</div>
@@ -16,21 +33,21 @@
 				<!--image of naismith mvp trophy -->
 			</div>
 			
-			<div>
-				<select>
-					<option>Select a Year</option>
-					<option>2019</option>
-					<option>2017</option>
-				</select>
+			<div id = 'menu'>
+				<button id = 'menu_button'>Go to:</button> <!--dropdown link list in CSS -->
+				<div id='menu_options'>
+					<a class='menu_item' href="./index.html">Home</a>
+					<a class='menu_item' href="./2017.html">2017</a>
+				</div>
 			</div>
 		</div>
 
 
-		<div>	<!--body container (on all pages)-->
-			<div> <!-- body heading-->
+		<div id='container_body'>	<!--body container (on all pages)-->
+			<div id='container_intro'> <!-- body heading-->
 				<div>
-					<h3>
-						2018: James Harden
+					<h3 style="font-family: 'Secular One'">
+						2017: James Harden
 					</h3>
 					<h5>
 						Guard, Houston Rockets
@@ -40,49 +57,54 @@
 					<img src="#">
 					<p>Caption</p>
 				</div>
-				<div
-					>Some text blurb Harden stepback etc
+				<div>
+					<p>Some text blurb Harden stepback etc</p>
 				</div>
 			</div>
 			
-			<div>	<!-- body stats container -->
-				<div> <!--'boxes' for counting stats 1-->
+			<div id='container_stats'>	<!-- body stats container -->
+				<div class="stat_box"> <!--'boxes' for counting stats 1-->
 					<h4>Points</h4>
-					<h3>Number</h3>
-					<h5>PPG</h5>
+					<h3>2356</h3>
+					<h5>30.4 PPG</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 2-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 2-->
 					<h4>Rebounds</h4>
-					<h3>Number</h3>
-					<h5>RPG</h5>
+					<h3>659</h3>
+					<h5>5.4 RPG</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 3-->
+				<div class='stat_box'> <!--'boxes' for counting stats 3-->
 					<h4>Assists</h4>
-					<h3>Number</h3>
-					<h5>APG</h5>
+					<h3>907</h3>
+					<h5>8.8 APG</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 4-->
+				<div class='stat_box'> <!--'boxes' for counting stats 4-->
+					<h4>FG%</h4>
+					<h3>44.9%</h3>
+					<h5>1449 FGA</h5>
+				</div>
+				<div class='stat_box'> <!--'boxes' for counting stats 5-->
 					<h4>3 Pointers</h4>
-					<h3>Nummber%</h3>
-					<h5>3PA/game</h5>
+					<h3>36.7%</h3>
+					<h5>10.0 3PA/G</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 5-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 6-->
+					<h4>FT%</h4>
+					<h3>85.8%</h3>
+					<h5>10.1 FTA/G</h5>
+				</div>
+				<div class='stat_box'> <!--'boxes' for counting stats 7-->
 					<h4>Steals</h4>
-					<h3>Number</h3>
-					<h5>SPG</h5>
+					<h3>126</h3>
+					<h5>1.8 SPG</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 6-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 8-->
 					<h4>Blocks</h4>
-					<h3>Number</h3>
-					<h5>BPG</h5>
+					<h3>50</h3>
+					<h5>0.7 BPG</h5>
 				</div>
-				<div> <!--'boxes' for counting stats 7-->
+				<div  class='stat_box'> <!--'boxes' for counting stats 9-->
 					<h4>Plus / Minus</h4>
-					<h3>Number</h3>
-					<h5>League Rank?</h5>
-				</div>
-				<div> <!--'boxes' for counting stats 8-->
-					<h4>Player Efficiency Rating</h4>
 					<h3>Number</h3>
 					<h5>League Rank?</h5>
 				</div>
