header anchors fix
corrected menu anchor tag on 2017.html to make it point to 2019 rather than to itself

--- a/index.html
+++ b/index.html
@@ -170,9 +170,11 @@
 				</div>
 
 				<div id='container_search'>	<!--body right container-->
-					<input type="text" name="search" placeholder="Search for a player or season">
+					<h3>Search:</h3>
+					<input type="text" name="search" placeholder="Search for a player">
+
 					<script type="text/javascript" href='./scripts/scripts.js'>
-						
+						nameSearch()
 					</script>
 				</div>
 			</div>
