Scripting fixed, finalized page styling
fixed scripted search function on index page, added highlight video links on season pages

--- a/2019.html
+++ b/2019.html
@@ -49,16 +49,17 @@
 					<h3 style="font-family: 'Secular One'">
 						2019: Giannis Antetokounmpo
 					</h3>
-					<h5>
+					<h5 style='text-align: center;'>
 						Forward, Milwaukee Bucks
 					</h5>
 				</div>
-				<div>
-					<img src="#">
+				<div style="text-align: center;">
+					<img id='img_giannis' src="./images/giannis_action.jpg">
 					<p>Caption</p>
 				</div>
-				<div>
+				<div style='text-align: center;'>
 					<p>Some text blurb Giannis dunk etc</p>
+					<a href="https://www.youtube.com/watch?v=qdgc5yitWHg" class='video_link'><h3>Highlights</h3></a>
 				</div>
 			</div>
 			
