--- a/2017.html
+++ b/2017.html
@@ -49,16 +49,17 @@
 					<h3 style="font-family: 'Secular One'">
 						2017: James Harden
 					</h3>
-					<h5>
+					<h5 style='text-align: center;'>
 						Guard, Houston Rockets
 					</h5>
 				</div>
-				<div>
-					<img src="#">
+				<div style="text-align: center;">
+					<img id='img_harden' src="./images/harden_action.jpg">
 					<p>Caption</p>
 				</div>
-				<div>
+				<div style="text-align: center;">
 					<p>Some text blurb Harden stepback etc</p>
+					<a href="https://www.youtube.com/watch?v=Kk8TVGTXl3w" class="video_link"><h3>Highlights</h3></a>
 				</div>
 			</div>
 			
