--- a/2017.html
+++ b/2017.html
@@ -29,10 +29,6 @@
 					NBA MVP's
 				</h1>
 			</div>
-			<div>
-				<!--image of naismith mvp trophy -->
-			</div>
-			
 			<div id = 'menu'>
 				<button id = 'menu_button'>Go to:</button> <!--dropdown link list in CSS -->
 				<div id='menu_options'>
@@ -41,8 +37,6 @@
 				</div>
 			</div>
 		</div>
-
-
 		<div id='container_body'>	<!--body container (on all pages)-->
 			<div id='container_intro'> <!-- body heading-->
 				<div>
@@ -105,9 +99,9 @@
 					<h5>0.7 BPG</h5>
 				</div>
 				<div  class='stat_box'> <!--'boxes' for counting stats 9-->
-					<h4>Plus / Minus</h4>
-					<h3>Number</h3>
-					<h5>League Rank?</h5>
+					<h4>Player Eff. Rtg.</h4>
+					<h3>29.87</h3>
+					<h5 style="color: transparent;">xx</h5>
 				</div>
 			</div>
 
